Attempt to fix footer position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@
 html {
 	position: relative;
 	max-width: 65ch;
-	min-height: 100%;
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
 	margin: 0 auto;
 }
 
